Added initial testing

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
 testpaths = tests
+python_files = test_*.py *_test.py
+pythonpath = src
+python_classes = Test*
+python_functions = test_*
+addopts = -v --tb=short
+minversion = 6.0
