Updating orchestration for simplicity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     command: ["server", "/data", "--console-address", ":9001"]
     volumes:
       - minio_data:/data
-    networks:
-      - default
+
 
   prefect-server:
     image: prefecthq/prefect:3-latest
@@ -43,17 +42,12 @@ services:
     command: >
       /bin/bash -c "
         sleep 10 &&
-        prefect worker start --pool data_ingestion --work-queue default --base-path /opt/prefect/flows
+        prefect worker start --pool data_ingestion
       "
     environment:
       PREFECT_API_URL: "http://prefect-server:4200/api"
     depends_on:
       - prefect-init
-    volumes:
-      - .:/opt/prefect/flows
 
 volumes:
   minio_data:
-
-networks:
-  default:
